--- a/css/style.css
+++ b/css/style.css
@@ -271,16 +271,20 @@ a {
 }
 
 .book-form {
-  display: flex;
-  flex-direction: column;
+  /*display: flex;
+  flex-direction: column;*/
   background-color: #ffffff;
 
   width: 568px;
-  margin-left: 436px;
+  /*margin-left: 436px;*/
 
-  position: absolute;
+  /*position: absolute;*/
   padding-top: 0;
   height: 395px;
+  display: block;
+  position: relative;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .map {
