--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,6 @@ a {
 /* мультифоновое изображение */
 
 .main-background {
-  padding-left: 40px;
-  padding-right: 40px;
   height: 518px;
 
   background: url("../img/welcome.svg") no-repeat,
@@ -488,8 +486,11 @@ a {
   margin-top: 0;
   padding-top: 0;
   width: 109px;
-  margin-left: 522px;
+  margin-left: auto;
   min-height: 91px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .footer-social li:last-child {
