--- a/css/style.css
+++ b/css/style.css
@@ -237,8 +237,12 @@ a {
   padding: 0;
   margin: 0;
   margin-bottom: 30px;
-  margin-left: 500px;
-  margin-right: 500px;
+
+  display: flex;
+  justify-content: center;
+  width: 459px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container-advantages {
